well. I created a graph. It's a bit rubbish though.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="main.js"></script>
+    <style>
+    path {
+    stroke: steelblue;
+    stroke-width: 2;
+    fill: none;
+    }
+
+    line {
+        stroke: black;
+    }
+
+    text {
+        font-family: Arial;
+        font-size: 9pt;
+    }
+  </style>
   </head>
   <body>
   </body>
