added company-appropriate colours

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <svg class="chart"></svg>
+    <!-- <svg class="chart"></svg> -->
   </body>
 </html>
