sizing is off but horizontal stacked bar is done :)

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <!-- <svg class="chart"></svg> -->
+    <!-- <div id='tooltip' class='hidden'>
+      <p><span id='value'>100></span> -->
   </body>
 </html>
