--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="main.js"></script>
   </head>
   <body>
-    <!-- <svg class="chart"></svg> -->
-    <!-- <div id='tooltip' class='hidden'>
-      <p><span id='value'>100></span> -->
+    <button id="requests">Compare requests</button>
+    <button id="compliances">Compare compliances</button>
   </body>
+  <script src="main.js"></script>
 </html>
