can now choose compliance numbers or percentages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <button id="requests">Compare requests</button>
     <button id="compliances">Compare compliances</button>
+    <button id="compliancePerc">Compare compliance percentages</button>
   </body>
   <script src="main.js"></script>
 </html>
