event listeners and stack graph creation abstracted

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <button id="requests">Compare requests</button>
     <button id="compliances">Compare compliances</button>
   </body>
+  <script src="stackGraph.js"></script>
   <script src="main.js"></script>
+  <script src="eventListeners.js"></script>
 </html>
